--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -63,6 +63,12 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.7"/>
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5_add_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.94"/>
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineValueSX"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -170,10 +176,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/container_add_button"
-        android:layout_marginBottom="20pt"
         android:text="@string/confirm_button"
         style = "@style/add_button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline5_add_item"
         app:layout_constraintStart_toStartOf="@id/midline_add"
         app:layout_constraintEnd_toEndOf="@id/guidelineDescriptionDX"
         />
@@ -182,11 +187,10 @@
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline5_add_item"
         app:layout_constraintStart_toStartOf="@id/guidelineDescriptionSX"
         app:layout_constraintEnd_toEndOf="@id/midline_add"
         android:background="@drawable/container_delete_button"
-        android:layout_marginBottom="20pt"
         android:text="@string/delete_button"
         style="@style/delete_button"
         />
