--- a/app/src/main/res/layout/fragment_update_item.xml
+++ b/app/src/main/res/layout/fragment_update_item.xml
@@ -35,6 +35,13 @@
         app:layout_constraintGuide_percent="0.5"
         />
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5_update_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.94"
+        />
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/midline_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -166,13 +173,12 @@
 
     <Button
         android:id="@+id/update_button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline5_update_item"
         app:layout_constraintStart_toStartOf="@id/midline_update"
         app:layout_constraintEnd_toEndOf="@id/guidelineDescriptionDX_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/container_add_button"
-        android:layout_marginBottom="20pt"
         android:text="@string/update_button"
         style = "@style/add_button"
         android:enabled="false"
@@ -183,11 +189,10 @@
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline5_update_item"
         app:layout_constraintStart_toStartOf="@id/guidelineDescriptionSX_update"
         app:layout_constraintEnd_toEndOf="@id/midline_update"
         android:background="@drawable/container_delete_button"
-        android:layout_marginBottom="20pt"
         android:text="@string/delete_button"
         style="@style/delete_button"
         />
