--- a/app/src/main/res/layout/fragment_incoming.xml
+++ b/app/src/main/res/layout/fragment_incoming.xml
@@ -88,6 +88,21 @@
         android:layout_marginBottom="5pt"
         android:layout_marginTop="5pt"
         >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/empty_chart_text_incoming"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/empty_chart_string"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="10dp"
+                android:theme="@style/TextStyle"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/chart_incoming"
             android:layout_width="match_parent"
@@ -124,7 +139,35 @@
         app:layout_constraintTop_toBottomOf="@id/guideline_incoming1"
         app:layout_constraintBottom_toTopOf="@id/guideline_incomingEnd"
         app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal"
         >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_empty_list_incoming"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <ImageView
+                android:id="@+id/empty_icon_incoming"
+                android:layout_width="100dp"
+                android:layout_height="125dp"
+                android:src="@drawable/empty"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/empty_img"
+                />
+            <TextView
+                android:id="@+id/empty_text_incoming"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/stringTransaction"
+                android:theme="@style/TextStyle"
+                app:layout_constraintTop_toBottomOf="@id/empty_icon_incoming"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="5dp"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
