--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/Spese"
         app:showAsAction="never"
-        android:title="@string/menu_spese"/>
+        android:title="@string/menu_uscite"/>
     <item
         android:id="@+id/Entrate"
         app:showAsAction="never"
