--- a/app/src/main/res/layout/item_category_detail.xml
+++ b/app/src/main/res/layout/item_category_detail.xml
@@ -12,7 +12,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:paddingVertical="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/container_item"
