--- a/app/src/main/res/layout/popup_category_detail.xml
+++ b/app/src/main/res/layout/popup_category_detail.xml
@@ -39,6 +39,7 @@
         android:background="@drawable/container_home"
 
         android:layout_marginTop="5pt"
+        android:padding="0dp"
         app:layout_constraintTop_toBottomOf="@id/container_title"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
