--- a/app/src/main/res/layout/item_fragment_category.xml
+++ b/app/src/main/res/layout/item_fragment_category.xml
@@ -10,7 +10,7 @@
     android:background="?attr/selectableItemBackground"
     style="@style/MenuStyle_update">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/container_item"
@@ -27,19 +27,24 @@
             android:layout_gravity="center_vertical"
             android:paddingStart="5dp"
             android:text="--"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="15sp"/>
 
         <Button
             android:id="@+id/delete_basket"
-            android:layout_width="30dp"
+            android:layout_width="48dp"
             android:layout_height="wrap_content"
             app:icon="@drawable/basket_light"
             android:layout_gravity="end"
-            android:layout_marginStart="280dp"
-            android:padding="2dp"
             android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="Elimina"
             />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
