--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:id="@+id/Constraint_update_category"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -34,10 +34,10 @@
         android:layout_height="0dp"
         android:background="@drawable/container_home"
         android:orientation="horizontal"
-        android:layout_marginStart="10pt"
-        android:layout_marginEnd="10pt"
-        android:layout_marginTop="5pt"
-        android:layout_marginBottom="5pt"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="40dp"
         app:layout_constraintTop_toBottomOf="@id/guideline_category0"
         app:layout_constraintBottom_toBottomOf="parent"
         >
