fix widget hole pt.1

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -102,4 +102,7 @@
     <color name="thumbTrue">#BEFF9C</color>
     <color name="thumbFalse">#FF9C9C</color>
 
+    <!--pieChart Legend-->
+    <color name="black_hole">#434343</color>
+
 </resources>
