--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,7 +38,10 @@
             android:id="@+id/action_homeFragment_to_categoryFragment"
             app:destination="@id/categoryFragment"
             />
-
+        <action
+            android:id="@+id/action_homeFragment_to_creditsFragment"
+            app:destination="@id/creditsFragment"
+            />
     </fragment>
     <fragment
         android:id="@+id/addFragment"
@@ -106,6 +109,18 @@
         >
         <action
             android:id="@+id/action_categoryFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            />
+    </fragment>
+
+    <fragment
+        android:id="@+id/creditsFragment"
+        android:name="unipd.dei.cashelper.ui.CreditsFragment"
+        android:label="Credits"
+        tools:layout="@layout/fragment_credits"
+        >
+        <action
+            android:id="@+id/action_credtisFragment_to_homeFragment"
             app:destination="@id/homeFragment"
             />
     </fragment>
