widget hole color pt.2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -103,6 +103,6 @@
     <color name="thumbFalse">#FF9C9C</color>
 
     <!--pieChart Legend-->
-    <color name="black_hole">#434343</color>
+    <color name="legend">#727070</color>
 
 </resources>
