--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,28 +2,24 @@
     <!-- Base application theme. -->
     <style name="Theme.CasHelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/full_orange</item>
+        <item name="colorPrimary">@color/button_dark</item>
         <item name="colorPrimaryVariant">@color/light_black</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/pink_salomon</item>
-        <item name="colorSecondaryVariant">@color/light_orange</item>
+        <item name="colorSecondary">@color/container_dark</item>
+        <item name="colorSecondaryVariant">@color/container_dark</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/black</item>
         <!-- Customize your theme here. -->
         <item name="colorBackgroundFloating">?attr/colorPrimary</item>
-        <item name="backgroundColor">?attr/colorPrimaryVariant</item>
+        <item name="backgroundColor">@color/black</item>
         <item name="colorContainer">?attr/colorSecondary</item>
         <!-- Customize app_bar. -->
         <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
+        <item name="android:color">@color/light_black</item>
     </style>
 
-
-    <style name = "toolbar">
-        <item name="backgroundTint">?attr/colorPrimary</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
 
     <style name="delete_button">
         <item name="backgroundTint">@color/Exits</item>
@@ -85,5 +81,12 @@
     <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
         <item name="android:src">@drawable/menu_home_dark</item>
     </style>
+
+    <style name="Theme.CasHelper.AppWidgetContainer" parent="Theme.CasHelper.AppWidgetContainerParent">
+        <!-- Apply padding to avoid the content of the widget colliding with the rounded corners -->
+        <item name="appWidgetPadding">16dp</item>
+    </style>
+
+
 
 </resources>
