--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,15 +17,11 @@
         <item name="colorContainer">?attr/colorSecondary</item>
         <!-- Customize app_bar. -->
         <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
+        <item name="android:color">@color/container_item_light</item>
     </style>
 
 
 
-
-    <style name="toolbar">
-        <item name="backgroundTint">?attr/colorPrimary</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
 
     <style name="delete_button">
         <item name="backgroundTint">@color/Exits</item>
@@ -105,4 +101,6 @@
         <!-- Apply padding to avoid the content of the widget colliding with the rounded corners -->
         <item name="appWidgetPadding">16dp</item>
     </style>
+
+
 </resources>
