--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -29,36 +29,53 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.45" />
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/back_month"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="top"
-        android:theme="@style/Theme.CasHelper"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:icon="@drawable/baseline_arrow_back"
-        android:contentDescription="@string/back_month_button"
-        app:elevation="0dp"
-        android:layout_marginStart="5pt"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
+        android:elevation="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline0"/>
+        app:layout_constraintBottom_toTopOf="@id/guideline0">
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/back_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:theme="@style/Theme.CasHelper"
+            app:backgroundTint="?attr/colorBackgroundFloating"
+            app:icon="@drawable/baseline_arrow_back"
+            android:contentDescription="@string/back_month_button"
+            app:elevation="0dp"
+            android:layout_marginStart="5pt"
+            />
+    </FrameLayout>
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/next_month"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="top"
-        android:theme="@style/Theme.CasHelper"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:icon="@drawable/baseline_arrow_next"
-        android:contentDescription="@string/next_month_button"
-        app:elevation="0dp"
-        android:layout_marginEnd="5pt"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/guideline0"/>
+        app:layout_constraintBottom_toBottomOf="@id/guideline0">
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/next_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:theme="@style/Theme.CasHelper"
+            app:backgroundTint="?attr/colorBackgroundFloating"
+            app:icon="@drawable/baseline_arrow_next"
+            android:contentDescription="@string/next_month_button"
+            app:elevation="0dp"
+            android:layout_marginEnd="5pt"
+            />
+    </FrameLayout>
+
+
     <TextView
         android:id="@+id/month_text"
         android:layout_width="wrap_content"
