--- a/app/src/main/res/layout-land/fragment_outflow.xml
+++ b/app/src/main/res/layout-land/fragment_outflow.xml
@@ -43,35 +43,49 @@
         app:layout_constraintBottom_toTopOf="@id/guideline25_horizontal"
         android:layout_margin="2pt"
         style = "@style/DateStyle"/>
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/back_month"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="top"
-        android:theme="@style/Theme.CasHelper"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:icon="@drawable/baseline_arrow_back"
-        android:contentDescription="@string/back_month_button"
-        app:elevation="0dp"
-        android:layout_marginStart="5pt"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline25_horizontal"/>
+        app:layout_constraintBottom_toTopOf="@id/guideline25_horizontal">
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/back_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:theme="@style/Theme.CasHelper"
+            app:backgroundTint="?attr/colorBackgroundFloating"
+            app:icon="@drawable/baseline_arrow_back"
+            android:contentDescription="@string/back_month_button"
+            app:elevation="0dp"
+            android:layout_marginStart="5pt"
+            />
+    </FrameLayout>
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/next_month"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="top"
-        android:theme="@style/Theme.CasHelper"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:icon="@drawable/baseline_arrow_next"
-        android:contentDescription="@string/next_month_button"
-        app:elevation="0dp"
-        android:layout_marginEnd="5pt"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline25_horizontal"/>
+        app:layout_constraintBottom_toTopOf="@id/guideline25_horizontal">
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/next_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:theme="@style/Theme.CasHelper"
+            app:backgroundTint="?attr/colorBackgroundFloating"
+            app:icon="@drawable/baseline_arrow_next"
+            android:contentDescription="@string/next_month_button"
+            app:elevation="0dp"
+            android:layout_marginEnd="5pt"
+            />
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
