--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -70,7 +70,10 @@
     </style>
 
     <style name="Delete_category">
-        <item name="android:background">@drawable/basket_dark</item>
+        <item name="android:outlineProvider">@null</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:foreground">@drawable/basket_dark</item>
+        <item name="android:backgroundTint">?attr/android:color</item>
     </style>
 
     <style name="MenuStyle_empty" parent="Widget.AppCompat.ActionButton.Overflow">
