--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -5,8 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?attr/backgroundColor"
     android:id="@+id/Constraint_add_item"
-    android:clickable="true"
-    android:onClick="hideKeyboard">
+    android:clickable="true">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline0_add_item"
         android:layout_width="wrap_content"
@@ -127,13 +126,14 @@
         app:layout_constraintStart_toStartOf="@+id/guidelineValueSX"
         app:layout_constraintEnd_toStartOf="@id/euro"
         app:layout_constraintTop_toBottomOf="@id/guideline2_add_item"
-        />
+        android:autofillHints="" />
 
     <ImageView
         android:id="@+id/euro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_euro"
+        android:contentDescription="@string/euro"
         app:layout_constraintStart_toEndOf="@id/value_add_item"
         app:layout_constraintEnd_toEndOf="@id/guidelineValueDX"
         app:layout_constraintBottom_toTopOf="@+id/guideline3_add_item"
