--- a/app/src/main/res/layout-land/fragment_update_item.xml
+++ b/app/src/main/res/layout-land/fragment_update_item.xml
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/midline_horizontal"
         app:layout_constraintEnd_toStartOf="@id/midline_vertical"
-        android:contentDescription="Categorie"
+        android:contentDescription="@string/category_spinner"
         />
 
     <Button
@@ -76,7 +76,6 @@
         app:layout_constraintStart_toEndOf="@id/category_select_update"
         app:layout_constraintTop_toBottomOf="@id/midline_horizontal"
         android:gravity="center"
-        android:contentDescription="Aggiungi categoria"
         />
 
     <EditText
@@ -90,7 +89,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/midline_vertical"
-        />
+        android:autofillHints="" />
 
     <ImageView
         android:id="@+id/euro"
@@ -100,7 +99,7 @@
         android:layout_margin="15dp"
         app:layout_constraintStart_toEndOf="@id/value_update_item"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        android:contentDescription="@string/euro" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
@@ -132,7 +131,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:backgroundTint="@color/violet"
         android:id="@+id/date_update_item"
-        android:contentDescription="Calendario"
         />
 
     <Button
