--- a/app/src/main/res/layout/fragment_update_item.xml
+++ b/app/src/main/res/layout/fragment_update_item.xml
@@ -126,7 +126,7 @@
         app:layout_constraintStart_toStartOf="@+id/guideline_update_ValueSX"
         app:layout_constraintEnd_toStartOf="@id/euro"
         app:layout_constraintTop_toBottomOf="@id/guideline2_update_item"
-        />
+        android:autofillHints="" />
 
     <ImageView
         android:id="@+id/euro"
@@ -137,7 +137,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline3_update_item"
         app:layout_constraintTop_toBottomOf="@id/guideline2_update_item"
         app:layout_constraintEnd_toEndOf="@id/guideline_update_ValueDX"
-        />
+        android:contentDescription="@string/euro" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
